# control-layer

./: .db-info  .dockerignore  .gitignore  .release-please-manifest.json  BASELINE_BENCHMARK.txt  BENCHMARK_RESULTS.md  BUILD_OPTIMIZATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPILATION_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXTRACTION_GUIDE.md  LICENSE  MIGRATION_OPTIMIZATION.md  OPTIMIZATION_RESULTS.md  README.md  SCOUTER.md  TEST_OPTIMIZATION_RECOMMENDATIONS.md  TODO.md  alternative_optimizations.md  benchmark-tests.sh  benchmark.sh  benchmark_build.sh  benchmark_build_comprehensive.sh  benchmark_detailed.sh  benchmark_timing.sh  clay_config.yaml  compare_builds.sh  config.yaml  docker-bake.hcl  docker-compose.benchmark.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  justfile  payments.py  quick_benchmark.sh  (+4 more)
batcher/: .env.example  Cargo.toml  TODO.md
batcher/examples/: cli.rs  server.rs
batcher/migrations/: 001_initial_schema.sql  20250103000000_initial_schema.down.sql  20250103000000_initial_schema.up.sql  20250106000000_initial_schema.up.sql
batcher/src/: daemon.rs  error.rs  frontend.html  http.rs  in_memory.rs  lib.rs  main.rs  types.rs
benchmark/: Cargo.toml  Dockerfile  litellm_config.yaml
benchmark/src/: main.rs  sse_handler.rs
benchmark/templates/: base.html  index.html  monitor.html
dwctl/: CHANGELOG.md  Cargo.toml  ENCRYPTION.md  README.md  build.rs
dwctl/.cargo/: config.toml
dwctl/.sqlx/: query-0013944d2aa7d7080d3bc39d603d0d52a67490da9217ce9954a5fe6cd9f15a58.json  query-01dff587cc91a07ffff74c5cbb57cdc937aaf157da25580d816a018fbad80bc6.json  query-02b2aba4b321010f82b9cd7797ac3ace6680b24dfd4be60fde66cef430d26afc.json  query-033d070fc6c1646bdc98781c33e8e12bfdb2d48af4c3d9d22bd86296aeb55dc4.json  query-03ec14b3275f5fe4973ebc0d42de9e3b5872c0e43dd1ddb79f08bd192401e9d8.json  query-04163ade1f1e876947699bfd249d8bdb2c07a25e22a9dacd1a386c9ba1643763.json  query-04cf8f7d739684cdf213eaa8da237c68093cbde3d3da8ed63655e815eb6f2784.json  query-04d89352f16f973fc5586c54a603d8679bda876087ea48909a45db2818d88364.json  query-052ee101fdfcdd84f65f86d3cbc81c97ef6a24d88204edc8b88b4b4ff31c5584.json  query-0674a97c0a58b423b26720517f63ddda5c61feb7b4ca306d100b1eb3c3798426.json  query-09139014124c382fced3c0e35c87b437d5d1ba4b5a17788b3b5352428151128f.json  query-0ded4094acd2ff89b6c05f8f5779773506628e9c99c1e96dd1466f071532cd4c.json  query-0e919b14f4fd202f8ad6e5f7a1d51b1dde902dfa39aa9137c5b3684c502f6cfe.json  query-0e9d3fd1d8aca3458d59de891f6c4a54e538b971bf9e4d84d1060012d0db98b6.json  query-0ee217daa83c6ebb1a7623c8d56bf36a4af996ca916f45078c8f1d599e83dcce.json  query-0efa97994c19d8f9928cb7fc2797477e6a3c1aca2f0594be0daef99574a0bc00.json  query-0f8fde4ef24e03a9b1af8205c0285fe091a6891b01fb59c596256159ccabb5f0.json  query-108f7d039dc67f083ac504efe308a394945dddc91ffd359f2534bcdc4f3c9ce3.json  query-10b4b06249f039627e72db70f1c155a485db17cf742ed074c741b4e0e1b55d53.json  query-1280f060d5a9a502563e3b80f31ba53e465ad720a1cd06bcfc5d8e629adf963e.json  query-1510f81cc773620c0410ae7609aee9340c31854453139df001ef7c6118a589fa.json  query-16f8ca02a88267033af3cc45d7fef975d1ac825fd538a77676a12cd5f2e90a2e.json  query-19cf89a4ddb325db7ac20afbb8c94106016be4f77ea233f5a9a0593c092eecb7.json  query-1cb30233a62f4587958fb40644dddf5901f3fb21e2e62b6855dd61028b29281a.json  query-1d9f37f5180d3b8c03a6e1f8195deb4f18dfc0cf6fb03e81bcf02ffe1d1d9605.json  query-1ee6056408732a6dfb352d87f0f567fbbee435c56775bb041665e874b0dd0fe0.json  query-205e9241db6c2e89708b2560be600c2740b1c0e8f4e9333597e5901664f9bbd3.json  query-208bfa2713a3ddb916f7de1b8da2e19dc3bcbb2627a07ccfc808404f108f09b7.json  query-2090391724f853d742a52465e65c21bee576b7e33a532d69163e609d1f6b6e82.json  query-22d62e4fd39ac3823c45d40afccbd5f559bbe70cd4bb27437af5bc1e87ac9579.json  query-2809e9328f4b3325a986ddcb5a93b6da6ad3a7249d94375b3d799630bb6a8373.json  query-285dbaed5fca5a9b9be5f760c42115c586e9ff348e02ad7cb0177a447027a3e7.json  query-2946624a1f24a63ed374873039ebb0b0d42f31334ced87005aa6bc8ebaef87fd.json  query-29dbbb71782841c85e29f1b9830629b5163848c8e2281e17926c22a89fce3428.json  query-2a61ae076d2765c889ffa3e17f9ce77fd2290cd1567f84d1be00aac501523517.json  query-2ab155fb70d93389330f5331a457491afaf18b84dd2d613e78c918abb427dd3e.json  query-2b2acebe7adcdc4bfae4f07c906b5fb744a34221e458321aae5ab95dbc74e0fe.json  query-2b36a5920371b8c8d172b3f987c4c271dae0b3a9a5dfe71bb7b392b395672184.json  query-2e206d1220602e3b54db21d7c5b5415819d2a543ab46df6e80699442704aac4f.json  query-2eae55c07bf0d42e459dd083774dc6d6894c37cbbad321a6cba4a237ff287576.json  (+205 more)
dwctl/default_templates/: auto_topup_disabled.html  auto_topup_failed.html  auto_topup_limit_reached.html  auto_topup_retry.html  auto_topup_success.html  batch_complete.html  first_batch.html  low_balance.html  org_email_change_notice.html  org_email_change_verify.html  org_email_change_verify_new.html  org_email_change_verify_old.html  org_invite.html  password_reset.html
dwctl/emails/: 8b20ed8f-afea-41a5-ac7d-f8ab3f70f946.eml
dwctl/migrations/: 019_add_probes.sql  019_add_text_value_to_system_config.sql  019_enforce_alias_uniqueness.sql  020_add_credit_system.sql  020_add_files_metadata_table.sql  020_add_probes.sql  020_unique_probe_per_deployment.sql  021_add_batch_api_user_role.sql  021_add_billing_manager_role.sql  021_add_configurable_auth_headers.sql  021_add_credit_system.sql  021_add_probe_visibility.sql  022_remove_probe_visibility.sql  023_add_credit_system.sql  023_add_probe_notify_trigger.sql  024_add_files_metadata_table.sql  024_add_probe_request_config.sql  024_update_credit_decimal_precision.sql  026_add_api_key_purpose.sql  026_drop_files_metadata_table.sql  027_add_api_key_hidden_flag.sql  028_negative_balances.sql  029_add_model_capacity.sql  030_notify_on_balance_threshold.sql  031_add_external_user_id.sql  031_fix_balance_threshold_decimal_precision.sql  032_add_external_user_id.sql  033_add_unique_constraint_transaction_source_id.sql  033_composite_unique_email_external_user_id.sql  034_add_updated_at_triggers.sql  (+123 more)
xtask/: Cargo.toml
(+1769 files in other folders)
