[package]
name = "batcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "batcher"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
